tests/baselines/reference/spreadInvalidArgumentType.errors.txt
spreadInvalidArgumentType.ts(32,19): error TS2454: Variable 't' is used before being assigned.
spreadInvalidArgumentType.ts(33,16): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(33,19): error TS2454: Variable 'i' is used before being assigned.
spreadInvalidArgumentType.ts(34,16): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(34,19): error TS2454: Variable 'k' is used before being assigned.
spreadInvalidArgumentType.ts(35,19): error TS2454: Variable 'mapped_generic' is used before being assigned.
spreadInvalidArgumentType.ts(36,19): error TS2454: Variable 'mapped' is used before being assigned.
spreadInvalidArgumentType.ts(38,19): error TS2454: Variable 'union_generic' is used before being assigned.
spreadInvalidArgumentType.ts(39,16): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(39,19): error TS2454: Variable 'union_primitive' is used before being assigned.
spreadInvalidArgumentType.ts(41,20): error TS2454: Variable 'intersection_generic' is used before being assigned.
spreadInvalidArgumentType.ts(42,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(42,20): error TS2454: Variable 'intersection_primitive' is used before being assigned.
spreadInvalidArgumentType.ts(44,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(44,20): error TS2454: Variable 'num' is used before being assigned.
spreadInvalidArgumentType.ts(45,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(45,20): error TS2454: Variable 'str' is used before being assigned.
spreadInvalidArgumentType.ts(47,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(48,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(48,20): error TS2454: Variable 'n' is used before being assigned.
spreadInvalidArgumentType.ts(52,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(52,20): error TS2454: Variable 'literal_string' is used before being assigned.
spreadInvalidArgumentType.ts(53,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(53,20): error TS2454: Variable 'literal_number' is used before being assigned.
spreadInvalidArgumentType.ts(55,17): error TS2698: Spread types may only be created from object types.
spreadInvalidArgumentType.ts(55,20): error TS2454: Variable 'e' is used before being assigned.


==== spreadInvalidArgumentType.ts (26 errors) ====
    enum E { v1, v2 };
    
    function f<T extends { b: string }>(p1: T, p2: T[]) {
        var t: T;
    
        var i: T["b"];
        var k: keyof T;
    
        var mapped_generic: {[P in keyof T]: T[P]};
        var mapped: {[P in "b"]: T[P]};
    
        var union_generic: T | { a: number };
        var union_primitive: { a: number } | number;
    
        var intersection_generic: T & { a: number };
        var intersection_primitive: { a: number } | string;
    
        var num: number;
        var str: number;
        var literal_string: "string";
        var literal_number: 42;
    
        var u: undefined;
        var n: null;
        var a: any;
    
    
        var e: E;
    
        var o1 = { ...p1 };  // OK, generic type paramterre
        var o2 = { ...p2 };  // OK
        var o3 = { ...t };   // OK, generic type paramter
                      ~
!!! error TS2454: Variable 't' is used before being assigned.
        var o4 = { ...i };   // Error, index access
                   ~~~~
!!! error TS2698: Spread types may only be created from object types.
                      ~
!!! error TS2454: Variable 'i' is used before being assigned.
        var o5 = { ...k };   // Error, index
                   ~~~~
!!! error TS2698: Spread types may only be created from object types.
                      ~
!!! error TS2454: Variable 'k' is used before being assigned.
        var o6 = { ...mapped_generic }; // OK, generic mapped object type
                      ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'mapped_generic' is used before being assigned.
        var o7 = { ...mapped };  // OK, non-generic mapped type
                      ~~~~~~
!!! error TS2454: Variable 'mapped' is used before being assigned.
    
        var o8 = { ...union_generic };  // OK, union with generic type parameter
                      ~~~~~~~~~~~~~
!!! error TS2454: Variable 'union_generic' is used before being assigned.
        var o9 = { ...union_primitive };  // Error, union with generic type parameter
                   ~~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                      ~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'union_primitive' is used before being assigned.
    
        var o10 = { ...intersection_generic };  // OK, intersection with generic type parameter
                       ~~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'intersection_generic' is used before being assigned.
        var o11 = { ...intersection_primitive };  // Error, intersection with generic type parameter
                    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2454: Variable 'intersection_primitive' is used before being assigned.
    
        var o12 = { ...num };  // Error
                    ~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~~~
!!! error TS2454: Variable 'num' is used before being assigned.
        var o13 = { ...str };  // Error
                    ~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~~~
!!! error TS2454: Variable 'str' is used before being assigned.
    
        var o14 = { ...u };  // error, undefined-only not allowed
                    ~~~~
!!! error TS2698: Spread types may only be created from object types.
        var o15 = { ...n };  // error, null-only not allowed
                    ~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~
!!! error TS2454: Variable 'n' is used before being assigned.
    
        var o16 = { ...a };  // OK
    
        var o17 = { ...literal_string };  // Error
                    ~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'literal_string' is used before being assigned.
        var o18 = { ...literal_number };  // Error
                    ~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'literal_number' is used before being assigned.
    
        var o19 = { ...e };  // Error, enum
                    ~~~~
!!! error TS2698: Spread types may only be created from object types.
                       ~
!!! error TS2454: Variable 'e' is used before being assigned.
    }
    